--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
     "formik": "^2.4.5",
+    "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.1",
     "yup": "^1.3.3"
   },
   "devDependencies": {
